# hello-cpp

./: CMakeLists.txt
C-Note/: CNamingConventions.md  note-1-1第一个程序.md  note-1-2变量和数据类型.md  note-1-5函数.md  note-1-6指针.md  note-1-7内存.md  note-1-8复合类型.md  note-1-9标准文件.md
Note/: note-1-2变量和数据类型.md
Sources/: array.c  variable_type.c
module1/: CMakeLists.txt
module1/include/: module1_math.h  module1_math2.h
module1/src/: module1_math.c  module1_math2.c
module2/: CMakeLists.txt
module2/src/: module2_test.c
module_adv/: CMakeLists.txt
module_adv/src/: variable_type.c
module_basic/: CMakeLists.txt
module_basic/include/: my_math.h  scope.h
module_basic/other/: array.c  hello.c  hello.i  hello.s  operator_codestruct.c
module_basic/src/: file.c  function.c  memory.c  my_math.c  pointer.c  scope01.c  scope02.c  scope03.c  scope04.c  scope05.c  struct_type.c
system_code/: CMakeLists.txt
